Generation of more path supported in Eclipse plugin.